<resources>
    <string name="app_name">GPSTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gps_inactive">GPS inactive</string>
    <string name="current_speed">Current Speed:</string>
    <string name="average_speed">Average Speed:</string>
    <string name="overall_time">Overall Time:</string>
    <string name="start_tracking">START TRACKING</string>
    <string name="stop_tracking">STOP TRACKING</string>
    <string name="kmh">km/h</string>
</resources>
